fix: mobile layout row align-items to stretch

--- a/components/TheCraft.module.css
+++ b/components/TheCraft.module.css
@@ -187,6 +187,7 @@
 
   .row {
     flex-direction: column;
+    align-items: stretch;
     gap: 0;
   }
 
